fix(header): fix alignment w/custom header image

--- a/style/_utils/_animations.scss
+++ b/style/_utils/_animations.scss
@@ -44,10 +44,3 @@
 		@include transform(rotate(0));
 	}
 }
-
-// animate header
-@include keyframes(moveheader) {
-  0% { background-position: 0 0; }
-  50% { background-position: 100% 0; }
-  100% { background-position: 0 0; }
-}
